syntax = "proto3";

option csharp_namespace = "UserService";

package userService;

service UserService{
  rpc GetUserById(GetUserByIdRequest) returns (UserReply);
  rpc GetUserByName(GetUserByNameRequest) returns (UserListReply);
  rpc GetUserBySurname(GetUserBySurnameRequest) returns (UserListReply);
  rpc CreateUser(CreateUserRequest) returns (UserReply);
  rpc UpdateUser(UpdateUserRequest) returns (UserReply);
  rpc DeleteUser(DeleteUserRequest) returns (UserReply);
  rpc GetAllUsers(GetAllUsersRequest) returns (UserListReply);
}

message CreateUserRequest{
  string login = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  int32 age = 5;
}

message GetUserByIdRequest{
  int32 id = 1;
}

message GetUserByNameRequest{
  string name = 1;
}

message GetUserBySurnameRequest{
  string surname = 1;
}

message UpdateUserRequest{
  int32 id = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  int32 age = 5;
}

message DeleteUserRequest{
  int32 id = 1;
}

message GetAllUsersRequest{}

message UserReply{
  int32 id = 1; 
  string login = 2;
  string password = 3;
  string name = 4;
  string surname = 5;
  int32 age = 6;
}

message UserListReply {
  repeated UserReply users = 1;
}

service RpmService {
  rpc CreateRpm(CreateRpmRequest) returns (RpmReply);
  rpc GetRpm(GetRpmRequest) returns (RpmReply);
  rpc UpdateRpm(UpdateRpmRequest) returns (RpmReply);
  rpc DeleteRpm(DeleteRpmRequest) returns (RpmReply);
}

message CreateRpmRequest {
  int64 user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}

message UpdateRpmRequest {
  int64 user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}

message GetRpmRequest {
  int64 user_id = 1;
  string endpoint = 2;
}

message DeleteRpmRequest {
  int64 user_id = 1;
  string endpoint = 2;
}

message RpmReply {
  int64 user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}